--- a/aula16ex/modelo.css
+++ b/aula16ex/modelo.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(70, 142, 235.9);
+    background-color: rgb(70, 142, 236);
     font: normal 15 pt arial;
 } 
 
@@ -16,6 +16,11 @@ section {
     margin: auto;
     box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.363);
 }
+
+select#flista {
+    width: 150px;
+}
+
  footer {
     color: white;
     text-align: center;
